# unreal-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
Docs/: CONTRIBUTING.md
Python/: unreal_mcp_server.py
Python/tools/: asset_tools.py  editor_tools.py  level_tools.py
docs/: architecture-v0.8-plan.md  architecture-v0.8.x-phase2b-codex-plan.md  architecture.md  installing.md  roadmap.md
docs/tools/: README.md
examples/: kit_inventory.md
plugin/: UnrealMCP.uplugin
plugin/Source/UnrealMCP/: UnrealMCP.Build.cs
plugin/Source/UnrealMCP/Private/: MCPParams.cpp  MCPRegistrations.cpp  MCPRegistry.cpp  UnrealMCPBridge.cpp
plugin/Source/UnrealMCP/Private/Commands/: UnrealMCPAssetCommands.cpp  UnrealMCPBlueprintCommands.cpp  UnrealMCPBlueprintNodeCommands.cpp  UnrealMCPCommonUtils.cpp  (+7 more)
plugin/Source/UnrealMCP/Public/: MCPParams.h  MCPRegistry.h  MCPResponse.h  UnrealMCPBridge.h
sample/: UnrealMCPSample.uproject
sample/Config/: DefaultEngine.ini
sample/Plugins/: .gitkeep
sample/Source/: UnrealMCPSample.Target.cs  UnrealMCPSampleEditor.Target.cs
sample/Source/UnrealMCPSample/: UnrealMCPSample.Build.cs  UnrealMCPSample.cpp
scripts/: setup-dev-junction.ps1
server/: README.md  _registry.py  pyproject.toml  smoke_dispatch.py  unreal_mcp_server.py
server/tests/: conftest.py  test_object_property.py  test_smoke_dispatch.py
server/tools/: _common.py  asset_tools.py  blueprint_tools.py  editor_tools.py  level_tools.py  material_tools.py  niagara_tools.py  node_tools.py  outliner_tools.py  project_tools.py  umg_tools.py
tests/: README.md
(+20 files in other folders)
